# Global-Illumination-Ray-Tracer

./: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  LCcheckpt1.docx  Material.cpp  Material.h  Object.cpp  Object.h  ObjectData.h  Point.cpp  Point.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  World.cpp  World.h  lodepng.h  main.cpp
